--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,8 @@ ul {
     overflow: hidden;
     position: relative;
     display: none;
+    border-radius: 5px;
+    background: #eeeeeef0;
 }
 
 ul li {
@@ -44,12 +46,13 @@ ul li {
     align-items: center;
     cursor: pointer;
     border-bottom: 1px solid #c0c0c0;
-    padding: 2px 0
+    padding: 2px 0;
+    min-height: 50px;
 }
 ul li:last-child {
     border: 0;
 }
-ul li:hover, ul li.aktiv {
+ul li.aktiv {
     background:#f0efef;
 }
 ul li.exact {
@@ -68,11 +71,18 @@ ul li.exact::after {
     border-radius: 7px;
 }
 
-ul li .img {
+ul li .img, ul li .icon {
     width: 50px;
     min-width: 50px;
     padding: 12px;
     padding-top: 14px
+}
+ul li .icon {
+    padding: 2px 0 0px 0;
+    text-align: center;
+}
+ul li .icon i {
+    font-size: 24px;
 }
 ul li .img img {
     width: 100%;
