--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,7 @@ ul li .img, ul li .icon {
 ul li .icon {
     padding: 2px 0 0px 0;
     text-align: center;
+    color: #707070;
 }
 ul li .icon i {
     font-size: 24px;
@@ -172,7 +173,11 @@ ul li .text h1 b {
 }
 ul li .text p {
     color: #9d9d9d;
+    opacity: 0.5;
     font-size: 14px;
+}
+ul li.aktiv .text p {
+    opacity: 1;
 }
 ul .category {
     font-size: 14px;
